service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jupyterhub
spec:
  ports:
    - port: 8000
      protocol: TCP
      name: jupyterhub
      targetPort: jupyterhub
