route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: jupyterhub
spec:
  port:
    targetPort: jupyterhub
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: jupyterhub
